--- a/Python Amazon Sales Data Analysis/amazon data analysis.ipynb
+++ b/Python Amazon Sales Data Analysis/amazon data analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "da87ef68-8ddd-4f68-9edc-12594b76e69f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "ef650f39-8b70-4ab0-abce-2816a5663dc9",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b550f960-2610-4160-91cd-bab639d0339a",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "(128976, 21)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9b26c4af-8e45-42e9-b7d4-f3661ffc5bf8",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8c859fb5-f95d-4e26-942e-29426ba2b5f0",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "d1c0096e-4c3c-4807-9343-3482c6579ff7",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "437bc908-0041-4c9c-bef3-64cd4339dd1b",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "f55aa55a-d137-4730-bb50-1cb33e65e9ad",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "b4d644bd-5462-4bd6-8dc5-93d9fa84e77b",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "[128976 rows x 19 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "7c0e2b7f-5f2d-4ad8-8429-ffbe1f4cd0e7",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "e804910a-0360-425e-b0d4-3a0af61d891d",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
        "(128976, 19)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "43631658-374c-4bac-96df-18d93f0c8d05",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "7168fbe7-dce0-457b-b2e7-e45accfb41b7",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
        "(37514, 19)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "dd66039e-b450-4811-a1b1-3f12b811c010",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "612fe585-8b5f-40a3-a212-3609e48ce438",
    "metadata": {},
    "outputs": [
@@ -1070,7 +1070,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "de4ecc19-8f9c-4d56-b158-3244685c43da",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "fc8cdc97-dbea-4a7f-ba94-0a6fb690d969",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,17 +1114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "06d3298f-aac9-4202-a7c6-22c06a0b2bbd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maria\\AppData\\Local\\Temp\\ipykernel_22348\\3386729631.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['Date'] = pd.to_datetime(df['Date'])\n"
+     ]
+    }
+   ],
    "source": [
     "df['Date'] = pd.to_datetime(df['Date'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "6c867802-6b82-481c-bac6-e5db174efbb1",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "d0f66e57-b51f-4b7e-9c15-7a5d1edb7e3d",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "e6b8d6a7-6660-4a33-af53-3fc0dcd3fd35",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "5a716512-9ef6-495e-bc8e-3ae1405e4727",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1335,7 @@
        "std      279.952414     194550.425637  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "a46b4251-1f68-434a-adc5-84cb6e57440b",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1475,7 @@
        "freq      37514       2839         6236        37514        37514  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "6493f50f-213f-492a-bdc0-a9ac69fd12ad",
    "metadata": {},
    "outputs": [
@@ -1499,7 +1508,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "id": "c16a70d1-b125-40c1-91aa-904fa5e3517f",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "id": "0d83b7b1-ec1d-4e15-a43f-dc37220aba9a",
    "metadata": {},
    "outputs": [
@@ -1579,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "id": "f29bd514-34e2-427c-8c65-8d7771d04f29",
    "metadata": {},
    "outputs": [
@@ -1683,7 +1692,7 @@
        "1    4XL        93"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "id": "b7e0b1b2-f5c2-4a07-82a2-4cec3ad17918",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1713,7 @@
        "<Axes: xlabel='Size', ylabel='Quantity'>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1744,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "id": "8fe677cc-845b-43dd-8968-8ce88d4c1efb",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 30,
    "id": "6668d29a-0398-4254-b501-4fba733b6822",
    "metadata": {},
    "outputs": [
@@ -1812,12 +1821,12 @@
    "id": "5f3a2a09-9d42-41c0-9bb8-8923982b8f4f",
    "metadata": {},
    "source": [
-    "### Most buyers opt for T-short"
+    "### Most buyers opt for T-shirt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 31,
    "id": "9d927124-1ca6-4b39-a23b-17ecca41bb60",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 32,
    "id": "4a27a0e1-d051-422e-b3b0-7699fec29831",
    "metadata": {},
    "outputs": [
